[project]
name = "chatbot-voyages"
version = "0.0.1"
description = "Chatbot de recommandation de voyages (LangGraph) - examen CPF formation LangChain LBKE."
authors = [
    { name = "Christian Toulon", email = "christian@toulon.cx" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain>=1.1.0",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.4",
    "langgraph-cli[inmem]>=0.4.7",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.pydocstyle]
convention = "google"
